--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -6,22 +6,24 @@
   height: 100vh;
 }
 
-.documents-section {
-  background: #bfc1c2;
-  width: 300px;
-  border-right: 1px solid #ccc;
-  padding: 10px;
-  text-align: center;
-}
-
 .chatbot-container {
   position: fixed;
   bottom: 0;
   right: 0;
   height: 100vh;
-  background-color: #bfc1c2;
+  background: linear-gradient(to bottom, #36454F, #627581);
   display: flex;
   justify-content: flex-end; /* Align children to the right */
+}
+
+.documents-section {
+  font-size: large;
+  color: white;
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: linear-gradient(to bottom, #36454F, #627581);
+  text-align: center;
 }
 
 .chat-container {
@@ -76,15 +78,15 @@ button:hover {
 .assistant {
   color: white;
   margin-top: 20px;
-  text-align: center;    
-  background: linear-gradient(to right, #003366, #2e5b88); 
-  display: inline-block;
-  padding: 5px 90px;
+  text-align: left;    
+  padding: 5px;
   border-radius: 5px;
 }
   
 .red-font {
-  color: white;
+  color: black;
+  text-align: center;
+  background-color: #E5E4E2;
 } 
 
 .floating-boxes {
@@ -168,9 +170,11 @@ button:hover {
 }
 
 .process-assessment {
+  color: white;
+  font-size: large;
   text-align: center;
   position: absolute;
   width: 100%;
   top: 10%;
-  margin-top: -50px;
+  margin-top: -60px;
 }
