--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -57,14 +57,15 @@
                 height: 40px;
                 margin-top: 10%;
                 font-size: 16px;
-                background-color: #0b445a;
+                background-color: #003366;
                 color: #ffffff;
                 border: none;
-                border-radius: 8px;                
+                border-radius: 8px;              
 
             }
             button:hover{
                 cursor: pointer;
+                background-color: #164069;
             }  
         }
 
