--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -1,7 +1,7 @@
 // Aashika M Suresh
 
 .homepage-container {
-  background: linear-gradient(to bottom, #36454F, #627581);
+  background: linear-gradient(to bottom, rgb(14, 14, 14), rgb(102, 102, 102));
   display: flex;
   height: 100vh;
 }
@@ -11,7 +11,7 @@
   bottom: 0;
   right: 0;
   height: 100vh;
-  background: linear-gradient(to bottom, #36454F, #627581);
+  background: linear-gradient(to bottom, rgb(14, 14, 14), rgb(102, 102, 102));
   display: flex;
   justify-content: flex-end; /* Align children to the right */
 }
@@ -22,7 +22,7 @@
   width: 300px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background: linear-gradient(to bottom, #36454F, #627581);
+  background: linear-gradient(to bottom, rgb(14, 14, 14), rgb(102, 102, 102));
   text-align: center;
 }
 
@@ -115,6 +115,10 @@ button:hover {
   cursor: pointer;
 }
 
+.floating-box11:hover {
+  transform: scale(1.1);
+}
+
 .floating-box12 {
   background-color: rgba(255, 255, 255, 0.7);
   border: 1px solid #ccc;
@@ -123,6 +127,10 @@ button:hover {
   margin: 10px;
   margin-left: 150px;
   cursor: pointer;
+}
+
+.floating-box12:hover {
+  transform: scale(1.1);
 }
 
 .floating-box21 {
@@ -135,6 +143,10 @@ button:hover {
   cursor: pointer;
 }
 
+.floating-box21:hover {
+  transform: scale(1.1);
+}
+
 .floating-box22 {
   background-color: rgba(255, 255, 255, 0.7);
   border: 1px solid #ccc;
@@ -143,6 +155,10 @@ button:hover {
   margin: 10px;
   margin-left: 100px;
   cursor: pointer;
+}
+
+.floating-box22:hover {
+  transform: scale(1.1);
 }
 
 .floating-box31 {
@@ -155,6 +171,10 @@ button:hover {
   cursor: pointer;
 }
 
+.floating-box31:hover {
+  transform: scale(1.1);
+}
+
 .floating-box32 {
   background-color: rgba(255, 255, 255, 0.7);
   border: 1px solid #ccc;
@@ -163,6 +183,10 @@ button:hover {
   margin: 10px;
   margin-left: 50px;
   cursor: pointer;
+}
+
+.floating-box32:hover {
+  transform: scale(1.1);
 }
 
 .floating-box:hover {
